# mnemo

./: .env.example  .gitignore  CLAUDE-FIX2.md  CODEX-CLI.md  CODEX-FIX.md  CODEX-LIGHT-THEME.md  CODEX-MCP.md  CODEX-PHASE1.md  CODEX-PHASE2.md  CODEX-PHASE3.md  CODEX-PHASE4.md  CODEX-PHASE5.md  CODEX-UI.md  CODEX-V02.md  CODEX-VERCEL.md  DEV-PLAN.md  MEETING-2026-03-03.md  README.en.md  README.ko.md  README.md  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
api/: dbg_path.py  digest.py  health.py  health_test.py  index.py  links.py  notes.py  notes_id.py  requirements.txt  search.py  tags.py  tree.py  webhook.py
api/_lib/: auth.py  config.py  db.py  models.py
apps/backend/: .env.example  Dockerfile  fly.toml  pyproject.toml  requirements.txt
apps/backend/app/: main.py
apps/backend/app/api/v1/: categories.py  digest.py  enrich.py  graph.py  health.py  ingest.py  links.py  lorien.py  notes.py  search.py  tree.py  webhook.py
apps/backend/app/core/: auth.py  config.py  db.py  md_to_html.py
apps/backend/app/models/: folder.py  ingest_job.py  note.py
apps/backend/app/services/: lorien_client.py
apps/backend/app/workers/: ingest_worker.py
apps/cli/: README.md  pyproject.toml
apps/cli/mnemo/: __init__.py  cli.py  client.py  config.py
apps/frontend/: .env.example  .env.production  index.html  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.js  (+3 more)
apps/mcp/: README.md  pyproject.toml
apps/mcp/mnemo_mcp/: server.py
docs/: api-contract.md  architecture.md  runbook.md
(+21 files in other folders)
