[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemo-cli"
version = "0.1.0"
description = "CLI for mnemo - AI agent's Obsidian knowledge manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = []

[project.scripts]
mnemo = "mnemo.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["mnemo"]
