[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemo-mcp"
version = "0.1.0"
description = "MCP server for mnemo knowledge management"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mnemo-mcp = "mnemo_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mnemo_mcp"]
